--- a/react-deploy/src/App.css
+++ b/react-deploy/src/App.css
@@ -1,8 +1,28 @@
-.App {
+/* .App {
   text-align: center;
+  background-color: #27292a;
+  height: 100%;
+  width: 100%;
+} */
+.App {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #27292a;
+  padding: 15%;
+  /* background-color: #faeac5; */
 }
 
-.App-logo {
+.letter {
+  color: #ffffff;
+  font-family: "Courier";
+  text-align: left;
+}
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +55,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
