finishing up bio and contents

--- a/react-deploy/src/App.css
+++ b/react-deploy/src/App.css
@@ -7,12 +7,19 @@
   align-items: center;
   background-color: #27292a;
   padding: 10%;
-  overflow: auto;
+  overflow-y: scroll;
 }
 
 .letter {
   color: #ffffff;
   font-family: "Courier";
+  text-align: left;
+  font-size: small;
+}
+
+.title{
+  color: #ffffff;
+  font-family: "Arial Black";
   text-align: left;
   font-size: medium;
 }
