--- a/react-deploy/src/App.css
+++ b/react-deploy/src/App.css
@@ -5,8 +5,8 @@
   justify-content: center;
   align-items: center;
   background-color: #27292a;
-  padding: 10%;
-  overflow: auto;
+  /* padding: 5%; */
+  /* overflow: auto; */
 }
 
 .letter {
@@ -23,6 +23,10 @@
   font-size: medium;
 }
 
+.click:hover {
+  transform: scale(1.2);
+  transition-duration: 0.5s;
+}
 
 body {
    height: 100%;
